# stupid-llm-chat

./: .gitignore  README.md  app.py  dumbasslib.py  myowndumbasswrapperforopenrouternbecauseitdoesntworkonwindowsforsomereason.py  pyproject.toml
.github/workflows/: python-publish.yml
src/dumbassllmchattingprogram/: app.py
